# stretch_ros

./: Dockerfile  GalacticDemo.md  robot.repos  stretch_ros.repos
.github/workflows/: docker.yaml
docker/: README.md
galactic_demo/: CMakeLists.txt  package.xml
galactic_demo/galactic_demo/: __init__.py
galactic_demo/include/galactic_demo/: pick_n_place.h  rocking_bit.h  stretch_task.h
galactic_demo/scripts/: rock_it
galactic_demo/src/: galactic_demo.cpp  galactic_demo2.cpp  pick_n_place.cpp  rocking_bit.cpp  stretch_task.cpp
hello_helpers/src/hello_helpers/: gripper_conversion.py  hello_misc.py
picknik_stretch/: CMakeLists.txt  package.xml
picknik_stretch/config/: view_robot.rviz
picknik_stretch/launch/: see_stretch.launch
picknik_stretch/scripts/: send_trajectory
realsense_ignition_plugin/: CMakeLists.txt  package.xml
stretch_core/: README.md  package.xml  setup.py
stretch_core/launch/: rplidar.launch  stretch_driver.launch  stretch_driver.launch.py  stretch_robot.launch.py
stretch_core/nodes/: joint_trajectory_server.py  stretch_driver
stretch_core/stretch_core/: action_exceptions.py  command_groups.py  command_groups2.py  custom_action.py  custom_client.py  joint_trajectory_server.py  plot_planned.py  plot_traj.py  send_traj.py  stop_all_trajectories.py  stretch_driver.py  trajectory_components.py
stretch_dashboard/: package.xml
stretch_description/urdf/: description_test.urdf.xacro  stretch.sdf  stretch_aruco.urdf  stretch_aruco.xacro  stretch_d435i.xacro  stretch_description.xacro  stretch_gripper.urdf  stretch_gripper.xacro  stretch_ignition.sdf  stretch_ignition.xacro  stretch_ignition_plugins.xacro  stretch_laser_range_finder.urdf  stretch_main.sdf  stretch_main.urdf  stretch_main.xacro  stretch_respeaker.urdf  stretch_test.sdf  stretch_test.urdf  test.sdf
stretch_gazebo/: CMakeLists.txt  package.xml
stretch_gazebo/config/: arm.yaml  controllers.yaml  drive_config.yaml  head.yaml  sim.rviz  stretch_gazebo.rviz
stretch_gazebo/launch/: cmd_vel_test.launch.py  description_test.launch.py  gazebo.launch  gazebo.launch.py  ignition.launch.py  ignition_urdf.launch.py  moveit_ignition.launch.py
stretch_gazebo/models/stretch_ignition/: model.config  model.sdf
stretch_gazebo/urdf/: stretch.sdf  stretch_gazebo.urdf.xacro
stretch_gazebo/worlds/: empty_world.sdf  stretch.world
stretch_ignition/: CMakeLists.txt  README.md  package.xml
stretch_ignition/config/: navigation.yaml
stretch_ignition/launch/: ignition.launch.py  navigation.launch.py
stretch_ignition/rviz/: stretch_ignition.rviz
stretch_ignition/sdf/: stretch.sdf
stretch_ignition/src/: odom2tf.cpp  stretch_sticky_static_tf_publisher.cpp
stretch_ignition/worlds/: aws_small_house.sdf  empty_world.sdf  pick_place_world.sdf
stretch_ignition_control/: package.xml
stretch_ignition_control/stretch_ignition_control/: stretch_ignition_base_control_action_server.py  stretch_ignition_control_action_server.py
stretch_moveit_config/: package.xml  test.bash
stretch_moveit_config/config/: default_joint_limits.yaml  joint_limits.yaml  kinematics.yaml  moveit_simple_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  stretch.xacro  stretch_description.srdf
stretch_moveit_config/launch/: demo.launch  demo.launch.py  demo_gazebo.launch.py  demo_ignition.launch.py  move_group.launch  moveit.rviz  moveit_ignition.rviz  moveit_rviz.launch
stretch_navigation/: package.xml
stretch_navigation/config/: base_local_planner_params.yaml  common_costmap_params.yaml  global_costmap_params_nomap.yaml  global_costmap_params_withmap.yaml  local_costmap_params.yaml
stretch_navigation/rviz/: navigation.rviz
stretch_plan_client/: CMakeLists.txt  package.xml
stretch_plan_client/src/: stretch_plan_client.cpp
stretch_roscon_demos/: CMakeLists.txt  package.xml
stretch_roscon_demos/launch/: move_group_interface_demo.launch.py  moveit_cpp_demo.launch.py
stretch_roscon_demos/src/: move_group_interface_demo.cpp  moveit_cpp_demo.cpp
