<?xml version="1.0"?>
<package format="2">
  <name>picknik_stretch</name>
  <version>0.0.0</version>
  <description>The picknik_stretch package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>stretch_description</depend>
  <depend>xacro</depend>

</package>
