<?xml version="1.0"?>
<package format="2">
  <name>stretch_gazebo</name>
  <version>0.0.0</version>
  <description>The stretch_gazebo package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>

</package>
