<?xml version="1.0"?>
<package format="2">
  <name>stretch_plan_client</name>
  <version>0.0.0</version>
  <description>The stretch_plan_client package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>

</package>
